TWINS-379: [class field] new batch create/update APIs (#492)
* TWINS-379:[class field] new batch create/update APIs

* TWINS-379: refactor after code review

* TWINS-379: small refactor

* TWINS-379: refactor after code review 2

* TWINS-379: fixes

* TWINS-379: naming changes

* TWINS-379: marked deprecated dto's and endpoints

* TWINS-379: refactor with api evolution

* TWINS-379: small fix

* TWINS-379: small fix

* TWINS-379: refactor TwinClassField create/update

* TWINS-379: CacheEvictCollector

* TWINS-379: refactor after code review

* TWINS-382: small fix

* TWINS-379: refactor updateFields

* TWINS-379: small fix

---------

Co-authored-by: nikita.mekh <n.mekh@hutkigrosh.by>